[feature/ai-1]: add post and update task and add unit test